--- a/CSC_698/requirements.txt
+++ b/CSC_698/requirements.txt
@@ -3,7 +3,12 @@ pandas
 nba_api
 langchain
 langchain-community
+langchain-core
+langchain-classic
 langchain-huggingface
 langchain-groq
-chromadb
+langchain-experimental
+chromadb>=0.5.0
+pydantic-settings
 sentence-transformers
+tabulate
